[gd_scene load_steps=26 format=3 uid="uid://dyawlu53u7bd2"]

[ext_resource type="Shader" uid="uid://dvefp8crwbeq8" path="res://materials/pico8.gdshader" id="1_ckupo"]
[ext_resource type="Texture2D" uid="uid://4lhd8480iw6b" path="res://hidden-library-1x.png" id="2_fi8nj"]
[ext_resource type="Script" uid="uid://gppeximxjkd1" path="res://scenes/mainmenu/walker.gd" id="3_xyqql"]
[ext_resource type="ArrayMesh" uid="uid://koa2u8a543wt" path="res://models/custom/chickenfoot.obj" id="4_fi8nj"]
[ext_resource type="ArrayMesh" uid="uid://ch833iwhnyybk" path="res://models/custom/house.obj" id="4_xyqql"]
[ext_resource type="Texture2D" uid="uid://bi15mclwmsexa" path="res://textures/window_paralax/parallax-demon-woods-close-trees.png" id="6_2x7eg"]
[ext_resource type="Script" uid="uid://cumg8to7est6l" path="res://scenes/mainmenu/paralax.gd" id="7_p5kud"]
[ext_resource type="Texture2D" uid="uid://b7p3rhw2cfrtr" path="res://textures/window_paralax/parallax-demon-woods-close-treetops.png" id="7_ugunp"]
[ext_resource type="Texture2D" uid="uid://joxn32oypkaf" path="res://textures/window_paralax/parallax-demon-woods-mid-trees.png" id="9_vvrmg"]
[ext_resource type="Texture2D" uid="uid://f5n3f27l4pxq" path="res://textures/window_paralax/parallax-demon-woods-far-trees.png" id="10_542r0"]
[ext_resource type="Texture2D" uid="uid://b2vxcdbcpwh6q" path="res://textures/window_paralax/kais-worse-mountains.png" id="11_8gim3"]
[ext_resource type="Theme" uid="uid://5wep3gngthoj" path="res://ui/default_theme.tres" id="11_aqxfm"]
[ext_resource type="Texture2D" uid="uid://c3bst5fw73pkb" path="res://textures/nameideas/name 4.png" id="13_n1qyp"]

[sub_resource type="Environment" id="Environment_3vvtq"]
background_mode = 1
background_color = Color(0.839216, 0.462745, 0.329412, 1)
fog_mode = 1
fog_light_color = Color(0.745098, 0.403922, 0.247059, 1)
fog_density = 1.0
fog_sky_affect = 0.0
fog_depth_begin = 4.0
fog_depth_end = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s5g8n"]
shader = ExtResource("1_ckupo")
shader_parameter/palette_texture = ExtResource("2_fi8nj")
shader_parameter/palette_size = 14
shader_parameter/solid_modifier = 0.6
shader_parameter/max_distance = 0.6
shader_parameter/gamma = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_natt5"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ckupo"]
size = Vector3(0.2, 0.2, 1.4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ugunp"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("6_2x7eg")
uv1_scale = Vector3(20, 1, 1)
texture_filter = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_p5kud"]
size = Vector2(40, 2)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p5kud"]
render_priority = 1
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("7_ugunp")
uv1_scale = Vector3(20, 1, 1)
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_542r0"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("9_vvrmg")
uv1_scale = Vector3(20, 1, 1)
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aqxfm"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("10_542r0")
uv1_scale = Vector3(20, 1, 1)
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n1qyp"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("11_8gim3")
uv1_scale = Vector3(20, 1, 1)
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8gim3"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
shading_mode = 0
albedo_texture = ExtResource("6_2x7eg")
uv1_scale = Vector3(0, 0, 0)
texture_filter = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_n1qyp"]
size = Vector2(4.29, 25.025)

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3vvtq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_s5g8n")
offset_right = 1155.0
offset_bottom = 650.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.624705, -0.0118748, -0.780771, -0.0261962, 0.99964, 0.00575642, 0.780421, 0.0240493, -0.624791, -2.12624, 1.58549, -3.34245)
fov = 77.7

[node name="Walker" type="Node3D" parent="."]
script = ExtResource("3_xyqql")
stride_length = 2.0
limb_length = 1.13
step_height = 1.0
walk_speed = 2.0
house_min_height = 1.5
house_max_height = 1.8
foot_angle_rate = -0.6
foot_max_angle = 100.0

[node name="House" type="MeshInstance3D" parent="Walker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = ExtResource("4_xyqql")

[node name="LeftFoot" type="MeshInstance3D" parent="Walker"]
transform = Transform3D(-0.692639, 0, 0.287665, 0, 0.75, 0, -0.287665, 0, -0.692639, 1, 0, 0)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = ExtResource("4_fi8nj")

[node name="RightFoot" type="MeshInstance3D" parent="Walker"]
transform = Transform3D(-0.692408, 0, -0.288221, 0, 0.75, 0, 0.288221, 0, -0.692408, -1, 0, 0)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = ExtResource("4_fi8nj")

[node name="LeftKnee" type="Marker3D" parent="Walker"]

[node name="RightKnee" type="Marker3D" parent="Walker"]

[node name="RightShin" type="Node3D" parent="Walker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04345, 0, 0)

[node name="RightShin" type="MeshInstance3D" parent="Walker/RightShin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = SubResource("BoxMesh_ckupo")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Node3D/Walker")

[node name="LeftShin" type="Node3D" parent="Walker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03164, 0, 0)

[node name="LeftShin" type="MeshInstance3D" parent="Walker/LeftShin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = SubResource("BoxMesh_ckupo")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Node3D/Walker")

[node name="LeftThigh" type="Node3D" parent="Walker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04345, 0, 0)

[node name="RightShin" type="MeshInstance3D" parent="Walker/LeftThigh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = SubResource("BoxMesh_ckupo")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Node3D/Walker")

[node name="RightThigh" type="Node3D" parent="Walker"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.03164, 0, 0)

[node name="LeftShin" type="MeshInstance3D" parent="Walker/RightThigh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
material_override = SubResource("StandardMaterial3D_natt5")
mesh = SubResource("BoxMesh_ckupo")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Node3D/Walker")

[node name="ForestForeground" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.57146, 0.850369, 0.452899)
material_override = SubResource("StandardMaterial3D_ugunp")
mesh = SubResource("PlaneMesh_p5kud")
script = ExtResource("7_p5kud")

[node name="ForestForeground" type="MeshInstance3D" parent="ForestForeground"]
transform = Transform3D(1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, 0, 1.9, 0)
material_override = SubResource("StandardMaterial3D_p5kud")
mesh = SubResource("PlaneMesh_p5kud")

[node name="ForestForeground2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.71983, 0.850369, 0.452899)
material_override = SubResource("StandardMaterial3D_542r0")
mesh = SubResource("PlaneMesh_p5kud")
script = ExtResource("7_p5kud")
parallax_amount = 1.2

[node name="ForestForeground3" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.08904, 0.850369, 0.452899)
material_override = SubResource("StandardMaterial3D_aqxfm")
mesh = SubResource("PlaneMesh_p5kud")
script = ExtResource("7_p5kud")
parallax_amount = 0.6

[node name="ForestForeground4" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.25225, 3.14661, 0.451566)
material_override = SubResource("StandardMaterial3D_n1qyp")
mesh = SubResource("PlaneMesh_p5kud")
script = ExtResource("7_p5kud")
parallax_amount = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_8gim3")
mesh = SubResource("PlaneMesh_n1qyp")

[node name="Button" type="Button" parent="."]
offset_left = 9.0
offset_top = 135.0
offset_right = 102.0
offset_bottom = 166.0
theme = ExtResource("11_aqxfm")
theme_type_variation = &"FlatButton"
text = "New Game"

[node name="Button" type="Button" parent="Button"]
offset_top = 23.0
offset_right = 93.0
offset_bottom = 54.0
theme = ExtResource("11_aqxfm")
theme_type_variation = &"FlatButton"
text = "Settings"

[node name="Naem1" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(96, 93)
texture = ExtResource("13_n1qyp")
